[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Map_Parts/MP-05-Door-01.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Map_Parts/Door25x50.png" type="Texture" id=2]
[ext_resource path="res://SFX/Map_Parts/sfx_movement_dooropen2.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Door_Close"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/Door_Top:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StaticBody2D/Door_Bottom:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBody2D:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1015839, 1016351, 1016351 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("StaticBody2D:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 884767, 885279, 885279 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Door_Open"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/Door_Bottom:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StaticBody2D/Door_Top:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBody2D:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1016351, 1015839, 16 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("StaticBody2D:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 885279, 884767, 16 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 23.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.90129, 12.5469 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 0.858334 )

[node name="Door-75_Tall" type="Node2D" groups=[
"map",
]]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/Door_Close = SubResource( 1 )
anims/Door_Open = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 13 )
texture = ExtResource( 2 )
hframes = 7

[node name="Area2D-Left" type="Area2D" parent="."]
position = Vector2( -28, 13 )
collision_layer = 262144
collision_mask = 2050

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Left"]
shape = SubResource( 3 )

[node name="CollisionShape2D-Left-far" type="CollisionShape2D" parent="Area2D-Left"]
position = Vector2( -42, 0 )
shape = SubResource( 3 )
disabled = true

[node name="Area2D-Right" type="Area2D" parent="."]
position = Vector2( 27, 13 )
collision_layer = 262144
collision_mask = 2050
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Right"]
shape = SubResource( 3 )

[node name="CollisionShape2D-Right-far" type="CollisionShape2D" parent="Area2D-Right"]
position = Vector2( 42, 0 )
shape = SubResource( 3 )
disabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=[
"map",
]]
position = Vector2( 0, 13.1661 )
collision_layer = 1016351
collision_mask = 885279

[node name="Door_Top" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.625764, -12.0304 )
shape = SubResource( 4 )

[node name="Door_Bottom" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.493175, 12.3808 )
shape = SubResource( 4 )

[node name="Very_Top" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.264503, -24.5374 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="Area2D-Left" to="." method="_on_Area2DLeft_body_entered"]
[connection signal="body_exited" from="Area2D-Left" to="." method="_on_Area2DLeft_body_exited"]
[connection signal="body_entered" from="Area2D-Right" to="." method="_on_Area2DRight_body_entered"]
[connection signal="body_exited" from="Area2D-Right" to="." method="_on_Area2DRight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
